--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
                 <button id="reset"><ion-icon name="refresh-circle-outline" id="icon-reset"></ion-icon><br>Limpar</button>
             </div>
             <div id="memes-prontas">
-                <img class="memes-img" id="meme-1" src="images/meme001.png"></img>
-                <img class="memes-img" id="meme-2" src="images/meme002.png"></img>
-                <img class="memes-img" id="meme-3" src="images/meme005.png"></img>
-                <img class="memes-img" id="meme-4" src="images/meme006.png"></img>
+                <div id="bl01">
+                    <img class="memes-img" id="meme-1" src="images/meme1.png"></img>
+                    <img class="memes-img" id="meme-2" src="images/meme2.png"></img>
+                    <img class="memes-img" id="meme-3" src="images/meme3.png"></img>
+                    <img class="memes-img" id="meme-4" src="images/meme4.png"></img>
+                </div>
+                <div id="bl02">
+                    <img class="memes-img" id="meme-3" src="images/meme5.png"></img>
+                    <img class="memes-img" id="meme-4" src="images/meme6.png"></img>
+                    <img class="memes-img" id="meme-4" src="images/meme4.png"></img>
+                    <img class="memes-img" id="meme-3" src="images/meme5.png"></img>
+                </div>
             </div>
         </section>
         <section id="result">
