problema resolvido, era apenas o nome da pasta imagens

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             </div>
             <div id="memes-prontas">
                 <div id="bl01">
-                    <img class="memes-img" id="meme-1" src="images/meme1.png"></img>
-                    <img class="memes-img" id="meme-2" src="images/meme2.png"></img>
-                    <img class="memes-img" id="meme-3" src="images/meme3.png"></img>
-                    <img class="memes-img" id="meme-4" src="images/meme4.png"></img>
+                    <img class="memes-img" id="meme-1" src="imgs/meme1.png"></img>
+                    <img class="memes-img" id="meme-2" src="imgs/meme2.png"></img>
+                    <img class="memes-img" id="meme-3" src="imgs/meme3.png"></img>
+                    <img class="memes-img" id="meme-4" src="imgs/meme4.png"></img>
                 </div>
                 <div id="bl02">
-                    <img class="memes-img" id="meme-3" src="images/meme5.png"></img>
-                    <img class="memes-img" id="meme-4" src="images/meme6.png"></img>
-                    <img class="memes-img" id="meme-4" src="images/meme4.png"></img>
-                    <img class="memes-img" id="meme-3" src="images/meme5.png"></img>
+                    <img class="memes-img" id="meme-3" src="imgs/meme5.png"></img>
+                    <img class="memes-img" id="meme-4" src="imgs/meme6.png"></img>
+                    <img class="memes-img" id="meme-4" src="imgs/meme4.png"></img>
+                    <img class="memes-img" id="meme-3" src="imgs/meme5.png"></img>
                 </div>
             </div>
         </section>
